--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: A stunning personal blog Jekyll theme
-description: Journal is a stunning personal blog Jekyll theme with an image-focused design.
+title: Emmanuel Portelli
+description: This is my personal space where I explore Data Science projects.
 featured_image: /images/demo/demo-landscape.jpg
 ---
 
