--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Emmanuel Portelli
 description: This is my personal space where I explore Data Science projects.
-featured_image: /images/demo/demo-landscape.jpg
+featured_image: /images/data-analytics-vs-data-science.png
 ---
 
 <section class="blog single">
